--- a/UnityTemplate_FairyGUI/assets/Login/package.xml
+++ b/UnityTemplate_FairyGUI/assets/Login/package.xml
@@ -4,6 +4,7 @@
     <component id="sjed0" name="LoginPage.xml" path="/" exported="true"/>
     <component id="sjed2" name="微信登录.xml" path="/" exported="true"/>
     <component id="g82q3" name="Prompt.xml" path="/" exported="true"/>
+    <component id="g82q5" name="主页进入.xml" path="/" exported="true"/>
   </resources>
   <publish name="Login"/>
 </packageDescription>
